--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <modules>
         <module>feed-producer</module>
         <module>feed-consumer</module>
+        <module>registry</module>
     </modules>
 
     <properties>
@@ -51,7 +52,7 @@
         <!-- Define the version of the JBoss BOMs we want to import to specify tested stacks. -->
         <version.jboss.bom>9.0.0.Final</version.jboss.bom>
         <version.wildfly>9.0.0.Final</version.wildfly>
-
+        <version.org.infinispan>7.2.3.Final</version.org.infinispan>
 
         <!-- other plugin versions -->
         <version.maven.compiler.plugin>3.1</version.maven.compiler.plugin>
@@ -62,6 +63,7 @@
         <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <version.slf4j-api>1.7.5</version.slf4j-api>
     </properties>
 
     <dependencyManagement>
@@ -81,6 +83,21 @@
                 <version>${version.jboss.bom}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-core</artifactId>
+                <version>${version.org.infinispan}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${version.slf4j-api}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.aparnachaudhary</groupId>
+                <artifactId>registry</artifactId>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
