--- a/core/registry/pom.xml
+++ b/core/registry/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.aparnachaudhary</groupId>
-        <artifactId>service-discovery</artifactId>
+        <groupId>com.github.aparnachaudhary.kosh.core</groupId>
+        <artifactId>core-parent</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
 
