--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.aparnachaudhary.kosh</groupId>
-        <artifactId>kosh-parent</artifactId>
+        <groupId>com.github.aparnachaudhary.jaxrs.depot</groupId>
+        <artifactId>jaxrs.depot.parent</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.github.aparnachaudhary.kosh.core</groupId>
-    <artifactId>core-parent</artifactId>
+    <groupId>com.github.aparnachaudhary.jaxrs.depot.core</groupId>
+    <artifactId>core.parent</artifactId>
     <name>${project.groupId} - ${project.artifactId}</name>
     <packaging>pom</packaging>
 
