--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.aparnachaudhary.kosh</groupId>
-        <artifactId>kosh-parent</artifactId>
+        <groupId>com.github.aparnachaudhary.jaxrs.depot</groupId>
+        <artifactId>jaxrs.depot.parent</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.github.aparnachaudhary.kosh.examples</groupId>
-    <artifactId>examples-parent</artifactId>
+    <groupId>com.github.aparnachaudhary.jaxrs.depot.examples</groupId>
+    <artifactId>examples.parent</artifactId>
     <name>${project.groupId} - ${project.artifactId}</name>
     <packaging>pom</packaging>
 
@@ -22,7 +22,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.github.aparnachaudhary.kosh.core</groupId>
+                <groupId>com.github.aparnachaudhary.jaxrs.depot.core</groupId>
                 <artifactId>registry</artifactId>
                 <version>${project.version}</version>
             </dependency>
